<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"

    tools:context=".questionares_page5">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#F4F4F4"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="13dp"
            android:text="COVID-19 Self-Assessment Tool"
            android:paddingLeft="18dp"
            android:paddingRight="11dp"
            android:layout_marginBottom="2dp"
            android:justificationMode="inter_word"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="30dp"

                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="13dp"
                    android:background="#FB8C00"
                    android:justificationMode="inter_word"
                    android:paddingLeft="11dp"
                    android:paddingTop="3dp"
                    android:paddingRight="11dp"
                    android:text="Are you answering for yourself or someone else ?"
                    android:textColor="#fff"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_voiceurdu"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/roundbutton"
                        android:backgroundTint="#D81B60"
                        android:drawableLeft="@drawable/play_24"
                        android:drawableTint="#fff"
                        android:paddingLeft="4dp"
                        android:text="اردو"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/btn_voiceenglish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_vertical"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/roundbutton"
                        android:backgroundTint="#D81B60"
                        android:drawableLeft="@drawable/play_24"
                        android:drawableTint="#fff"
                        android:paddingLeft="4dp"
                        android:text="English"
                        android:textColor="#fff" />
                </LinearLayout>


                <TextView
                    android:id="@+id/txt_some_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="#fff"
                    android:justificationMode="inter_word"
                    android:paddingLeft="11dp"
                    android:paddingTop="3dp"
                    android:paddingRight="11dp"
                    android:textColor="#D81B60"
                    android:visibility="invisible"
                    android:textSize="12sp" />



                    <CheckBox
                        android:id="@+id/btnCheckBox_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_1" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_2" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_3" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_4" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_5" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_6" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_7" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_8" />

                    <CheckBox
                        android:id="@+id/btnCheckBox_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/data_9" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="100dp"
                android:layout_marginTop="12dp"
                android:id="@+id/btnpre"
                android:background="@drawable/roundbutton"
                android:backgroundTint="#1E88E5"
                android:layout_gravity="fill_vertical"
                android:text="Back"

                android:drawableLeft="@drawable/back_24"
                android:drawableTint="#fff"
                android:paddingLeft="6dp"
                android:textColor="#fff"
                android:layout_marginLeft="20dp"
                android:layout_height="40dp"/>
            <Button
                android:layout_width="100dp"
                android:layout_marginTop="12dp"
                android:id="@+id/btnnext"
                android:background="@drawable/roundbutton"
                android:backgroundTint="#1E88E5"
                android:layout_gravity="fill_vertical"
                android:text="Next"
                android:drawableRight="@drawable/next_24"
                android:paddingRight="6dp"
                android:drawableTint="#fff"
                android:textColor="#fff"
                android:layout_marginLeft="110dp"
                android:visibility="invisible"
                android:layout_height="40dp"/>

        </LinearLayout>
    </LinearLayout>




</FrameLayout>