<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".fragments_aftter_Allcheckbox_IsUncheck_checkbox9_page_9">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="13dp"
            android:text="COVID-19 Self-Assessment Tool"
            android:paddingLeft="18dp"
            android:paddingRight="11dp"
            android:layout_marginBottom="2dp"
            android:justificationMode="inter_word"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:textColor="#FB8C00"
                    android:textSize="14sp"
                    android:background="#fff"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/fragments_aftter_Allcheckbox_IsUncheck_checkbox9_page9_a"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:justificationMode="inter_word"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:textColor="#5E35B1"
                    android:textSize="14sp"
                    android:background="#fff"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/fragments_aftter_Allcheckbox_IsUncheck_checkbox9_page9_b"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:justificationMode="inter_word"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="9sp"
                    android:background="#fff"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/fragments_aftter_Allcheckbox_IsUncheck_checkbox9_page9_c"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:justificationMode="inter_word"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#F40E0E"
                    android:textSize="9sp"
                    android:background="#fff"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/fragments_aftter_Allcheckbox_IsUncheck_checkbox9_page9_d"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:justificationMode="inter_word"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3949AB"
                    android:id="@+id/txt_all_text"
                    android:textSize="7sp"
                    android:background="#fff"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/questionares_page_7_text"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:layout_marginBottom="13dp"
                    android:justificationMode="inter_word"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/btnpre"
                android:background="@drawable/roundbutton"
                android:backgroundTint="#000"
                android:layout_gravity="fill_vertical"
                android:drawableLeft="@drawable/back_24"
                android:drawableTint="#fff"
                android:paddingLeft="1dp"
                android:paddingRight="2dp"
                android:text="Take the assessment again"
                android:textColor="#fff"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content">
            </Button>

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:id="@+id/btn_show_data"
            android:background="@drawable/roundbutton"
            android:layout_gravity="fill_vertical"
            android:text="Shown"
            android:textColor="#000"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp">
        </Button>
    </LinearLayout>




</FrameLayout>